@@ -99,7 +99,7 @@ setup(name=name,
         'Genshi',
         'python-dateutil',
         'polib',
-        'python-sql >= 0.4',
+        'python-sql >= 0.5',
         'werkzeug',
         'wrapt',
         'ipaddress',
