@@ -1,3 +1,4 @@
+* Use recursive common table expression for child_of/parent_of operators
 * Add sql_cast on Field
 
 Version 4.8.0 - 2018-04-23
